Add translations for slideshow headline color function

--- a/locales/de.schema.json
+++ b/locales/de.schema.json
@@ -2314,6 +2314,10 @@
             "title_size": {
               "label": "Größe des Header-Texts"
             },
+            "title_color": {
+              "label": "Farbe der Überschrift",
+              "info": "Leer lassen für Standardfarbe"
+            },
             "subheading": {
               "label": "Unter-Überschrift"
             },
