--- a/locales/en.default.schema.json
+++ b/locales/en.default.schema.json
@@ -1147,6 +1147,10 @@
         "title_size": {
           "label": "Heading text size"
         },
+        "title_color": {
+          "label": "Heading color",
+          "info": "Leave blank for default color"
+        },
         "subheading": {
           "label": "Subheading"
         },
@@ -1768,7 +1772,7 @@
         },
         "background_image": {
           "label": "Image",
-          "info": "Displayed if the map isn’t loaded"
+          "info": "Displayed if the map isn't loaded"
         },
         "background_image_position": {
           "label": "Image focal point",
@@ -2302,6 +2306,16 @@
         },
         "autoplay_speed": {
           "label": "Change images every"
+        },
+        "title_size": {
+          "label": "Heading text size"
+        },
+        "title_color": {
+          "label": "Heading color",
+          "info": "Leave blank for default color"
+        },
+        "subheading": {
+          "label": "Subheading"
         }
       },
       "blocks": {
@@ -2313,6 +2327,10 @@
             },
             "title_size": {
               "label": "Heading text size"
+            },
+            "title_color": {
+              "label": "Heading color",
+              "info": "Leave blank for default color"
             },
             "subheading": {
               "label": "Subheading"
@@ -3662,9 +3680,9 @@
     "home_page": {
       "onboarding": {
         "product_title": "Example product",
-        "product_description": "This area is used to describe your product’s details. Tell customers about the look, feel, and style of your product. Add details on color,  materials used, sizing, and where it was made.",
+        "product_description": "This area is used to describe your product's details. Tell customers about the look, feel, and style of your product. Add details on color,  materials used, sizing, and where it was made.",
         "collection_title": "Collection",
-        "no_content": "This section doesn’t currently include any content. Add content to this section using the sidebar."
+        "no_content": "This section doesn't currently include any content. Add content to this section using the sidebar."
       }
     },
     "layout": {
