--- a/locales/en.default.json
+++ b/locales/en.default.json
@@ -157,7 +157,8 @@
       "view_all_products_html": "View all<br>{{ count }} products",
       "see_more": "Show more",
       "see_less": "Show less",
-      "no_matches": "Sorry, there are no products in this collection."
+      "no_matches": "Sorry, there are no products in this collection.",
+      "no_brands_in_collection": "No brands found in this collection."
     },
     "sorting": {
       "title": "Sort"
@@ -282,9 +283,9 @@
   "home_page": {
     "onboarding": {
       "product_title": "Example product",
-      "product_description": "This area is used to describe your product’s details. Tell customers about the look, feel, and style of your product. Add details on color,  materials used, sizing, and where it was made.",
+      "product_description": "This area is used to describe your product's details. Tell customers about the look, feel, and style of your product. Add details on color,  materials used, sizing, and where it was made.",
       "collection_title": "Collection",
-      "no_content": "This section doesn’t currently include any content. Add content to this section using the sidebar."
+      "no_content": "This section doesn't currently include any content. Add content to this section using the sidebar."
     }
   },
   "layout": {
