Fix brand detail buttons (PDF)

--- a/locales/de.schema.json
+++ b/locales/de.schema.json
@@ -1578,6 +1578,9 @@
     "main-cart": {
       "name": "Warenkorbseite"
     },
+    "main-brand": {
+      "name": "Markenseite"
+    },
     "main-collection": {
       "name": "Kategorieseite",
       "settings": {
